# farepy

./: .buildinfo  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  table_of_contents.html
.claude/skills/farepy-search/: SKILL.md
.claude/skills/farepy-source/: SKILL.md
.github/workflows/: ci.yml
_modules/: index.html
_modules/farepy/: base.html  batch.html  cache.html  core.html  sources.html  util.html
_sources/: index.rst.txt  table_of_contents.rst.txt
_sources/module_docs/: farepy.rst.txt
_sources/module_docs/farepy/: base.rst.txt  batch.rst.txt  cache.rst.txt  core.rst.txt  sources.rst.txt  util.rst.txt
_sources/module_docs/farepy/sources/: google_flights_source.rst.txt  kayak_source.rst.txt  ryanair_source.rst.txt
farepy/: __init__.py  base.py  batch.py  cache.py  core.py  util.py
farepy/sources/: __init__.py  amadeus_source.py  google_flights_source.py  kayak_source.py  kiwi_source.py  ryanair_source.py
misc/docs/: Scraping flight prices in 2026- a comprehensive field guide.md
module_docs/: farepy.html
module_docs/farepy/: base.html  batch.html  cache.html  core.html  sources.html  util.html
module_docs/farepy/sources/: google_flights_source.html  kayak_source.html  ryanair_source.html
